# rust-backend-test

./: .env.example  .gitignore  compose.yaml
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: response_models.rs
backend/authentication/: Cargo.toml
backend/authentication-macros/: Cargo.toml
backend/authentication-macros/src/: lib.rs
backend/authentication/src/: authenticated_user.rs
backend/authentication_common/: Cargo.toml
backend/authentication_common/src/: jwt.rs  lib.rs
backend/authentication_macros/: Cargo.toml
backend/authentication_macros/src/: lib.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  post.rs  user.rs
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/migration/src/: lib.rs  m20250323_081950_create_post_table.rs  m20250325_192612_create_user_table.rs  m20250412_131251_add_user_roles.rs
backend/src/: lib.rs  main.rs
backend/src/auth/: authenticated_user.rs  guard.rs  jwt.rs  mod.rs
backend/src/config/: app_state.rs  database.rs  mod.rs
backend/src/controller/: authentication.rs  index.rs  mod.rs
backend/src/database/: mod.rs
backend/src/middleware/: authentication.rs  fairing.rs  jwt.rs  mod.rs  network_response.rs  request_models.rs  responder.rs  response_models.rs
backend/src/repository/: user_repository.rs
backend/src/route/: authentication.rs
backend/src/service/: authentication.rs
docker/backend/: Dockerfile
docker/database/: Dockerfile
