[package]
name = "backend-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
chrono = "0.4.40"


#serde_json = "1.0.140"
#tokio-postgres = "0.7.13"
#dotenvy = "0.15.7"
rocket_cors = { version = "0.6.0", default-features = false }
