[package]
name = "backend_app"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-cli = "1.1.7"
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
chrono = "0.4.40"

#tokio-postgres = "0.7.13"
#dotenvy = "0.15.7"
rocket_cors = { version = "0.6.0", default-features = false }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
